yamls/envoy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy
spec:
  selector:
    app: envoy
  ports:
  - name: http
    port: 80
    targetPort: 8080
  - name: admin
    port: 9901
    targetPort: 9901
